<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="58dp">

        <TextView
            android:id="@+id/tvId"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:text="@string/tv_idItem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_TitleItem" />

        <TextView
            android:id="@+id/tvNumOfPages"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/tv_NumOfPagesItem" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>